--- a/marketplace.html
+++ b/marketplace.html
@@ -92,13 +92,15 @@
                                     <h6 class="author-screen-name">PixelPainter92</h6>
                                     <h6 class="title">Fantasy World Adventures on an Epic Journey</h6>
                                     <p class="desc">Embark on an epic journey through a fantastical realm filled with magic and wonder.</p>
-                                    <h6 class="price">$9.99</h6>
-                                    <div class="star-div">
-                                        <i class="fa-solid fa-star star-icon rated"></i>
-                                        <i class="fa-solid fa-star star-icon rated"></i>
-                                        <i class="fa-solid fa-star star-icon rated"></i>
-                                        <i class="fa-solid fa-star star-icon rated"></i>
-                                        <i class="fa-solid fa-star star-icon"></i>
+                                    <div class="price-star-div">
+                                        <div class="star-div">
+                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                        </div>
+                                        <h6 class="price">$12.99</h6>
                                     </div>
                                 </div>
                             </div>
@@ -113,13 +115,15 @@
                                     <h6 class="author-screen-name">StoryWeaverPro</h6>
                                     <h6 class="title">Tales of Mystery and Intrigue</h6>
                                     <p class="desc">into a collection of gripping mysteries and suspenseful narratives that will keep you on the edge of your seat.</p>
-                                    <h6 class="price">$12.99</h6>
-                                    <div class="star-div">
-                                        <i class="fa-solid fa-star star-icon rated"></i>
-                                        <i class="fa-solid fa-star star-icon rated"></i>
-                                        <i class="fa-solid fa-star star-icon rated"></i>
-                                        <i class="fa-solid fa-star star-icon"></i>
-                                        <i class="fa-solid fa-star star-icon"></i>
+                                    <div class="price-star-div">
+                                        <div class="star-div">
+                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                        </div>
+                                        <h6 class="price">$12.99</h6>
                                     </div>
                                 </div>
                             </div>
@@ -134,13 +138,15 @@
                                     <h6 class="author-screen-name">ArtisticDreamer</h6>
                                     <h6 class="title">Dreamy Landscapes: A Visual Journey</h6>
                                     <p class="desc">Lose yourself in the mesmerizing beauty of serene landscapes and tranquil scenes that evoke a sense of peace and tranquility.</p>
-                                    <h6 class="price">$12.99</h6>
-                                    <div class="star-div">
-                                        <i class="fa-solid fa-star star-icon rated"></i>
-                                        <i class="fa-solid fa-star star-icon rated"></i>
-                                        <i class="fa-solid fa-star star-icon rated"></i>
-                                        <i class="fa-solid fa-star star-icon"></i>
-                                        <i class="fa-solid fa-star star-icon"></i>
+                                    <div class="price-star-div">
+                                        <div class="star-div">
+                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                        </div>
+                                        <h6 class="price">$12.99</h6>
                                     </div>
                                 </div>
                             </div>
@@ -156,14 +162,14 @@
                                     <h6 class="title">The Art of Animation: Basics and Beyond the Limits</h6>
                                     <p class="desc">Learn the fundamentals of animation and unleash your creativity with step-by-step guides and expert tips.</p>
                                     <div class="price-star-div">
-                                        <h6 class="price">$12.99</h6>
                                         <div class="star-div">
                                             <i class="fa-solid fa-star star-icon rated"></i>
                                             <i class="fa-solid fa-star star-icon rated"></i>
-                                            <i class="fa-solid fa-star star-icon rated"></i>
-                                            <i class="fa-solid fa-star star-icon rated"></i>
-                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
                                         </div>
+                                        <h6 class="price">$12.99</h6>
                                     </div>
                                 </div>
                             </div>
@@ -178,13 +184,15 @@
                                     <h6 class="author-screen-name">DigitalArtNinja</h6>
                                     <h6 class="title">Digital Delights: A Collection of Stunning Artworks</h6>
                                     <p class="desc">Feast your eyes on a gallery of breathtaking digital artworks showcasing the limitless possibilities of digital creativity.</p>
-                                    <h6 class="price">$12.99</h6>
-                                    <div class="star-div">
-                                        <i class="fa-solid fa-star star-icon rated"></i>
-                                        <i class="fa-solid fa-star star-icon rated"></i>
-                                        <i class="fa-solid fa-star star-icon"></i>
-                                        <i class="fa-solid fa-star star-icon"></i>
-                                        <i class="fa-solid fa-star star-icon"></i>
+                                    <div class="price-star-div">
+                                        <div class="star-div">
+                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                        </div>
+                                        <h6 class="price">$12.99</h6>
                                     </div>
                                 </div>
                             </div>
@@ -200,6 +208,148 @@
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
                       <span class="visually-hidden">Next</span>
                     </button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class=" section-padding">
+        <div class="container">
+            <div class="sec-heading-div">
+                <h3 class="title mb-0">Browse Catalog</h3>
+            </div>
+
+            <div class="row flipbooks-cards">
+                <div class="col-lg-3">
+                    <div class="filter-div">
+                        <div class="form-group">
+                            <label for="price_range" class="form-label">Price</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-9">
+                    <div class="row flipbooks-cards-row">
+                        <div class="col-md-6 carousel-col">
+                            <div class="flipbooks-card">
+                                <div class="img-div"><div class="img">IMG</div></div>
+                                <div class="inner-text-content">
+                                    <h6 class="author-screen-name">StoryWeaverPro</h6>
+                                    <h6 class="title">Tales of Mystery and Intrigue</h6>
+                                    <p class="desc">into a collection of gripping mysteries and suspenseful narratives that will keep you on the edge of your seat.</p>
+                                    <div class="price-star-div">
+                                        <div class="star-div">
+                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                        </div>
+                                        <h6 class="price">$12.99</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 carousel-col">
+                            <div class="flipbooks-card">
+                                <div class="img-div"><div class="img">IMG</div></div>
+                                <div class="inner-text-content">
+                                    <h6 class="author-screen-name">StoryWeaverPro</h6>
+                                    <h6 class="title">Tales of Mystery and Intrigue</h6>
+                                    <p class="desc">into a collection of gripping mysteries and suspenseful narratives that will keep you on the edge of your seat.</p>
+                                    <div class="price-star-div">
+                                        <div class="star-div">
+                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                        </div>
+                                        <h6 class="price">$12.99</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 carousel-col">
+                            <div class="flipbooks-card">
+                                <div class="img-div"><div class="img">IMG</div></div>
+                                <div class="inner-text-content">
+                                    <h6 class="author-screen-name">StoryWeaverPro</h6>
+                                    <h6 class="title">Tales of Mystery and Intrigue</h6>
+                                    <p class="desc">into a collection of gripping mysteries and suspenseful narratives that will keep you on the edge of your seat.</p>
+                                    <div class="price-star-div">
+                                        <div class="star-div">
+                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                        </div>
+                                        <h6 class="price">$12.99</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 carousel-col">
+                            <div class="flipbooks-card">
+                                <div class="img-div"><div class="img">IMG</div></div>
+                                <div class="inner-text-content">
+                                    <h6 class="author-screen-name">StoryWeaverPro</h6>
+                                    <h6 class="title">Tales of Mystery and Intrigue</h6>
+                                    <p class="desc">into a collection of gripping mysteries and suspenseful narratives that will keep you on the edge of your seat.</p>
+                                    <div class="price-star-div">
+                                        <div class="star-div">
+                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                        </div>
+                                        <h6 class="price">$12.99</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 carousel-col">
+                            <div class="flipbooks-card">
+                                <div class="img-div"><div class="img">IMG</div></div>
+                                <div class="inner-text-content">
+                                    <h6 class="author-screen-name">StoryWeaverPro</h6>
+                                    <h6 class="title">Tales of Mystery and Intrigue</h6>
+                                    <p class="desc">into a collection of gripping mysteries and suspenseful narratives that will keep you on the edge of your seat.</p>
+                                    <div class="price-star-div">
+                                        <div class="star-div">
+                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                        </div>
+                                        <h6 class="price">$12.99</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 carousel-col">
+                            <div class="flipbooks-card">
+                                <div class="img-div"><div class="img">IMG</div></div>
+                                <div class="inner-text-content">
+                                    <h6 class="author-screen-name">StoryWeaverPro</h6>
+                                    <h6 class="title">Tales of Mystery and Intrigue</h6>
+                                    <p class="desc">into a collection of gripping mysteries and suspenseful narratives that will keep you on the edge of your seat.</p>
+                                    <div class="price-star-div">
+                                        <div class="star-div">
+                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon rated"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                            <i class="fa-solid fa-star star-icon"></i>
+                                        </div>
+                                        <h6 class="price">$12.99</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -270,32 +420,20 @@
             }
         })
 
-        const carouselInner = document.querySelector('.carousel-inner');
-        const carouselItems = carouselInner.querySelectorAll('.carousel-item');
-
-        // Find the maximum height of all carousel items
+        const cards = document.querySelectorAll(".carousel-item");
         let maxHeight = 0;
-        for (const item of carouselItems) {
-            maxHeight = Math.max(maxHeight, item.offsetHeight);
-        }
 
-        console.log(carouselItems)
-        carouselItems.forEach((data) => {
-            data.style.height = `${maxHeight}px`;    
-            console.log(data)
-        })
+        // Find the maximum height among all cards
+        cards.forEach(card => {
+            const currentHeight = card.offsetHeight;
+            if (currentHeight > maxHeight) {
+                maxHeight = currentHeight;
+            }
+        });
 
-        // Set the maximum height inline on the carousel-inner
-        // carouselInner.style.height = `${maxHeight}px`;
-
-        // Optional: Handle resizing or dynamic content changes
-        window.addEventListener('resize', () => {
-        // Recalculate and set the maximum height again
-        maxHeight = 0;
-        for (const item of carouselItems) {
-            maxHeight = Math.max(maxHeight, item.offsetHeight);
-        }
-        // carouselInner.style.height = `${maxHeight}px`;
+        // Set the maximum height for all cards
+        cards.forEach(card => {
+            card.style.minHeight = `${maxHeight}px`;
         });
     </script>
 </body>
