--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </head>
 <body>
     <nav class="navbar fg-navbar navbar-expand-xl" id="navMain">
-        <a class="navbar-brand" href="javascript:void(0)"><img src="images/logo.png" alt="Flipguardian" class="brand-logo-img"></a>
+        <a class="navbar-brand" href="https://demo-flipguardian.netlify.app/"><img src="images/logo.png" alt="Flipguardian" class="brand-logo-img"></a>
         <button type="button" class="btn navbar-toggler border-0 toggle-menu" onclick="toggleSlide()" id="slide-toggle">
             <span class="navbar-dash"></span>
             <span class="navbar-dash"></span>
@@ -33,7 +33,7 @@
             <ul class="navbar-nav ml-auto" id="elastic_parentsss" data-targets=".nav-item">
                 <li class="nav-item active"><a class="nav-link" href="javascript:void(0)">Individual</a></li>
                 <li class="nav-item"><a class="nav-link" href="javascript:void(0)">Teams</a></li>
-                <li class="nav-item"><a class="nav-link" href="javascript:void(0)">Marketplace</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://demo-flipguardian-marketplace.netlify.app/">Marketplace</a></li>
                 <li class="nav-item"><a class="nav-link" href="javascript:void(0)">Pricing</a></li>
                 <li class="nav-item"><a class="nav-link" href="javascript:void(0)">Resources</a></li>
                 <li class="nav-item"><a class="nav-link" href="javascript:void(0)">Contact Us</a></li>
