--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </button>
         <div class="slide navbar-slide" id="slideNavs">
             <ul class="navbar-nav ml-auto" id="elastic_parentsss" data-targets=".nav-item">
-                <li class="nav-item active"><a class="nav-link" href="javascript:void(0)">Individual</a></li>
-                <li class="nav-item"><a class="nav-link" href="javascript:void(0)">Teams</a></li>
+                <li class="nav-item active"><a class="nav-link" href="https://demo-flipguardian-individuals.netlify.app/">Individual</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://demo-flipguardian-teams.netlify.app/">Teams</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://demo-flipguardian-marketplace.netlify.app/">Marketplace</a></li>
                 <li class="nav-item"><a class="nav-link" href="javascript:void(0)">Pricing</a></li>
                 <li class="nav-item"><a class="nav-link" href="javascript:void(0)">Resources</a></li>
