--- a/individuals.html
+++ b/individuals.html
@@ -113,9 +113,9 @@
                             <h5 class="subheading mb-5">It's time to take your publishing journey to new heights. Subscribe to Flip Guardian today and unlock a world of possibilities for your content.</h5>
                             <h5 class="subheading">Start Your FlipGuardian Journey Today</h5>
                             <div class="list-div">
-                                <div class="list"><i class="fa-solid fa-circle-dot icon"></i> Don't wait another moment to turn your passion into a reality.</div>
-                                <div class="list"><i class="fa-solid fa-circle-dot icon"></i> Sign up for FlipGuardian and unlock a world of possibilities.</div>
-                                <div class="list"><i class="fa-solid fa-circle-dot icon"></i> Elevate your publishing journey, profit from your passion, and experience the power of FlipGuardian.</div>
+                                <div class="list"><i class="fa-solid fa-angles-right icon"></i> Don't wait another moment to turn your passion into a reality.</div>
+                                <div class="list"><i class="fa-solid fa-angles-right icon"></i> Sign up for FlipGuardian and unlock a world of possibilities.</div>
+                                <div class="list"><i class="fa-solid fa-angles-right icon"></i> Elevate your publishing journey, profit from your passion, and experience the power of FlipGuardian.</div>
                             </div>
                         </div>
                     </div>
