--- a/teams.html
+++ b/teams.html
@@ -106,7 +106,7 @@
                             <h3 class="head">Join the Publishing Revolution</h3>
                             <h5 class="subheading mb-4" style="max-width: 100%;">Ready to revolutionize your publishing process? Subscribe to Flip Guardian for Teams today and empower your team to collaborate, create, and succeed like never before.</h5>
                             <h5 class="subheading">Get Started Now</h5>
-                            <h5 class="subheading" style="max-width: 100%;">Don't wait any longer to unlock the full potential of your team. Subscribe now and start transforming your publishing workflow with Flip Guardian for Teams.</h5>
+                            <h5 class="subheading d-flex gap-2 mb-0" style="max-width: 100%;"><i class="fa-solid fa-angles-right icon pt-2"></i> Don't wait any longer to unlock the full potential of your team. Subscribe now and start transforming your publishing workflow with Flip Guardian for Teams.</h5>
                         </div>
                     </div>
                 </div>
