--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
                 <div class="col-lg-6 price-col">
                     <div class="cards">
                         <div class="price-card">
+                            <h4 class="pricing-for-heading">For Individual</h4>
                             <div class="top-content">
-                                <h4 class="pricing-for-heading">For Individual</h4>
                                 <h5 class="price-head">Basic</h5>
                                 <p class="text">Elevate Your Publishing Journey, Profit from Your Passion</p>
                             </div>
@@ -173,8 +173,8 @@
 
                 <div class="col-lg-6 price-col">
                     <div class="price-card for-teams">
+                        <h4 class="pricing-for-heading">For Teams</h4>
                         <div class="top-content">
-                            <h4 class="pricing-for-heading">For Teams</h4>
                             <h5 class="price-head">Business</h5>
                             <p class="text">Empower Your Team, Monetize Your Content</p>
                         </div>
@@ -404,7 +404,7 @@
     <!-- Testimonials Section  -->
     <section class="testimonials-sec section-padding">
         <div class="container">
-            <div class="common-heading">
+            <div class="common-heading sticky-header">
                 <h3 class="subheading">See What People Are Saying</h3>
                 <h5 class="sec-title">Testimonials</h5>
             </div>
@@ -524,19 +524,25 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 left-padding">
+                <div class="col-lg-4 col-md-6 left-padding">
                     <h4 class="footer-title">Resources</h4>
                     <div class="links">
-                        <a href="javascript:void(0)" class="footer-link">Individual</a>
-                        <a href="javascript:void(0)" class="footer-link">Teams</a>
-                        <a href="javascript:void(0)" class="footer-link">Marketplace</a>
-                        <a href="#pricing-section" class="footer-link">Pricing</a>
-                        <a href="javascript:void(0)" class="footer-link">Resources</a>
-                        <a href="javascript:void(0)" class="footer-link">Blog</a>
-                        <a href="javascript:void(0)" class="footer-link">Contact Us</a>
+                        <div class="row w-100 gy-1">
+                            <div class="col-sm-6 d-flex gap-1 flex-column">
+                                <a href="javascript:void(0)" class="footer-link">Individual</a>
+                                <a href="javascript:void(0)" class="footer-link">Teams</a>
+                                <a href="javascript:void(0)" class="footer-link">Marketplace</a>
+                                <a href="#pricing-section" class="footer-link">Pricing</a>
+                            </div>
+                            <div class="col-sm-6 d-flex gap-1 flex-column">
+                                <a href="javascript:void(0)" class="footer-link">Resources</a>
+                                <a href="javascript:void(0)" class="footer-link">Blog</a>
+                                <a href="javascript:void(0)" class="footer-link">Contact Us</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-3 col-md-6">
                     <h4 class="footer-title">Get In Touch</h4>
                     <div class="get-in-touch-div">
                         <div class="location-div">Lorem ipsum dolor sit amet consectetur adipisicing US, 382620</div>
@@ -557,8 +563,6 @@
             <p class="copyright-text">Copyright - <a href="javascript:void(0)" class="color-primary text-decoration-none">FlipGuardian.com</a> a Synthium Health, Inc. Website - All Rights Reserved</p>
         </div>
     </footer>
-
-
 
     <!-- Modal, Form, Meeting Request  -->
     <div class="modal fade meeting-request-modal" id="meeting-request" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
