--- a/individuals.html
+++ b/individuals.html
@@ -125,7 +125,7 @@
 
         <section class="price-section individual-price-page section-padding" id="pricing-section">
             <div class="container">
-                <div class="pricing-heading">Prcing</div>
+                <div class="pricing-heading">Pricing</div>
                 <div class="row price-row">
                     <div class="col-lg-12 price-col">
                         <div class="cards">
@@ -186,19 +186,25 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 left-padding">
+                <div class="col-lg-4 col-md-6 left-padding">
                     <h4 class="footer-title">Resources</h4>
                     <div class="links">
-                        <a href="javascript:void(0)" class="footer-link">Individual</a>
-                        <a href="javascript:void(0)" class="footer-link">Teams</a>
-                        <a href="javascript:void(0)" class="footer-link">Marketplace</a>
-                        <a href="#pricing-section" class="footer-link">Pricing</a>
-                        <a href="javascript:void(0)" class="footer-link">Resources</a>
-                        <a href="javascript:void(0)" class="footer-link">Blog</a>
-                        <a href="javascript:void(0)" class="footer-link">Contact Us</a>
+                        <div class="row w-100 gy-1">
+                            <div class="col-sm-6 d-flex gap-1 flex-column">
+                                <a href="javascript:void(0)" class="footer-link">Individual</a>
+                                <a href="javascript:void(0)" class="footer-link">Teams</a>
+                                <a href="javascript:void(0)" class="footer-link">Marketplace</a>
+                                <a href="#pricing-section" class="footer-link">Pricing</a>
+                            </div>
+                            <div class="col-sm-6 d-flex gap-1 flex-column">
+                                <a href="javascript:void(0)" class="footer-link">Resources</a>
+                                <a href="javascript:void(0)" class="footer-link">Blog</a>
+                                <a href="javascript:void(0)" class="footer-link">Contact Us</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-3 col-md-6">
                     <h4 class="footer-title">Get In Touch</h4>
                     <div class="get-in-touch-div">
                         <div class="location-div">Lorem ipsum dolor sit amet consectetur adipisicing US, 382620</div>
