updated searchbar for marketplace

--- a/marketplace.html
+++ b/marketplace.html
@@ -306,6 +306,10 @@
                     </div>
                 </div>
                 <div class="col-lg-9">
+                    <div class="search-bar">
+                        <input type="text" class="input-text" placeholder="Search Flipbooks">
+                        <button class="primary-btn">Search</button>
+                    </div>
                     <div class="row flipbooks-cards-row">
                         <div class="col-md-6 carousel-col">
                             <div class="flipbooks-card">
