--- a/marketplace.html
+++ b/marketplace.html
@@ -307,7 +307,16 @@
                 </div>
                 <div class="col-lg-9">
                     <div class="search-bar">
-                        <input type="text" class="input-text" placeholder="Search Flipbooks">
+                          <div class="input-group">
+                            <select class="form-select search-categories" id="categories">
+                              <option selected>Select</option>
+                              <option value="Education">Education</option>
+                              <option value="Business">Business</option>
+                              <option value="Travel">Travel</option>
+                              <option value="Inspiration">Inspiration</option>
+                            </select>
+                            <input type="text" class="input-text" placeholder="Search Flipbooks">
+                          </div>
                         <button class="primary-btn">Search</button>
                     </div>
                     <div class="row flipbooks-cards-row">
