client changes for individuals and teams pages.

--- a/teams.html
+++ b/teams.html
@@ -46,14 +46,22 @@
         <section class="page-banner-section individual-page-sec">
             <div class="container">
                 <div class="inner-content">
-                    <h4 class="heading">Empower Your <span class="color-primary">Team</span>, Monetize Your Content</h4>
-                    <div class="p-text-div">
-                        <h6 class="subheading mb-0">In today's fast-paced work environment, teams need flexible yet powerful tools to seamlessly collaborate on projects from ideation to market impact.</h6>
-                        <h6 class="subheading mb-0">Welcome to a new era of collaborative publishing. Flip Guardian for Teams is your all-in-one solution for streamlining projects, enhancing productivity, and unlocking new monetization opportunities for your organization.</h6>
-                    </div>
-                    <div class="btns d-flex align-items-center gap-3">
-                        <a href="https://player.vimeo.com/video/914153086?h=534eca010f" target="_blank" class="primary-btn">Watch Video</a>
-                        <a href="javascript:void(0)" class="secondary-color-btn">Subscribe Now</a>
+                    <div class="row w-100">
+                        <div class="col-lg-6 gap-3 d-flex flex-column text-col">
+                            <h4 class="heading">Empower Your <span class="color-primary">Team</span>, Monetize Your Content</h4>
+                            <div class="p-text-div">
+                                <h6 class="subheading mb-0">In today's fast-paced work environment, teams need flexible yet powerful tools to seamlessly collaborate on projects from ideation to market impact.</h6>
+                                <h6 class="subheading mb-0">Welcome to a new era of collaborative publishing. Flip Guardian for Teams is your all-in-one solution for streamlining projects, enhancing productivity, and unlocking new monetization opportunities for your organization.</h6>
+                            </div>
+                            <div class="btns d-flex align-items-center gap-3 justify-content-center">
+                                <a href="javascript:void(0)" class="secondary-color-btn">Subscribe Now</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="video-div">
+                                <iframe src="https://player.vimeo.com/video/914153086?h=534eca010f" class="video-tag" frameborder="0" allow="autoplay; fullscreen; picture-in-picture"></iframe>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
