--- a/individuals.html
+++ b/individuals.html
@@ -46,10 +46,18 @@
         <section class="page-banner-section individual-page-sec">
             <div class="container">
                 <div class="inner-content">
-                    <h4 class="heading">Unlock Your Publishing Potential with <span class="color-primary">Flip Guardian's Individual</span> Subscription</h4>
-                    <div class="btns d-flex align-items-center gap-3">
-                        <a href="https://player.vimeo.com/video/914153086?h=534eca010f" target="_blank" class="primary-btn">Watch Video</a>
-                        <a href="javascript:void(0)" class="secondary-color-btn">Subscribe Now</a>
+                    <div class="row w-100">
+                        <div class="col-lg-6 gap-3 d-flex flex-column text-col">
+                            <h4 class="heading">Unlock Your Publishing Potential with <span class="color-primary">Flip Guardian's Individual</span> Subscription</h4>
+                            <div class="btns d-flex align-items-center justify-content-center gap-3">
+                                <a href="javascript:void(0)" class="secondary-color-btn">Subscribe Now</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="video-div">
+                                <iframe src="https://player.vimeo.com/video/915944061?h=534eca010f" class="video-tag" frameborder="0" allow="autoplay; fullscreen; picture-in-picture"></iframe>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
