--- a/teams.html
+++ b/teams.html
@@ -44,7 +44,7 @@
 
         <!-- Individuals Page Sections  -->
         <section class="page-banner-section individual-page-sec">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="inner-content">
                     <div class="row w-100">
                         <div class="col-lg-6 gap-3 d-flex flex-column text-col">
